chapter13/serviceaccount-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-serviceaccount-pod
spec:
  serviceAccount: sample-serviceaccount
  containers:
    - name: nginx
      image: nginx:1.16
