chapter13/cloud-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloud-networkpolicy
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
