chapter13/ipblock-ingress-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-ipblock-ingress-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: np4
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.244.3.183/32 # app=np1
      ports:
        - protocol: TCP
          port: 80
