chapter13/namespaceselector-ingress-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-nameselector-ingress-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: np3
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: default
      ports:
        - protocol: TCP
          port: 80
