chapter13/podselector-egress-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-podselector-egress-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: np1
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: np3
      ports:
        - protocol: TCP
          port: 80
